@@ -12,10 +12,10 @@ namespace vprTest
 class LibraryLoaderTest : public CppUnit::TestFixture
 {
 CPPUNIT_TEST_SUITE(LibraryLoaderTest);
-CPPUNIT_TEST(findEntryPointTestRaw);
-CPPUNIT_TEST(findEntryPointTestFunctor);
+CPPUNIT_TEST(callEntryPointTestRaw);
+CPPUNIT_TEST(callEntryPointTestFunctor);
 CPPUNIT_TEST(findDSOTest);
-CPPUNIT_TEST(findDSOAndLookupTest);
+CPPUNIT_TEST(findDSOAndCallEntryPointTest);
 CPPUNIT_TEST(multiLoadTest);
 CPPUNIT_TEST(loadFailureTest);
 CPPUNIT_TEST(lookupFailureTest);
@@ -25,10 +25,10 @@ CPPUNIT_TEST_SUITE_END();
 public:
    virtual void setUp();
 
-   void findEntryPointTestRaw();
-   void findEntryPointTestFunctor();
+   void callEntryPointTestRaw();
+   void callEntryPointTestFunctor();
    void findDSOTest();
-   void findDSOAndLookupTest();
+   void findDSOAndCallEntryPointTest();
    void multiLoadTest();
    void loadFailureTest();
    void lookupFailureTest();
